--- a/backend-java/cv-yolo/src/main/resources/application.properties
+++ b/backend-java/cv-yolo/src/main/resources/application.properties
@@ -1,7 +1,4 @@
-# java/cnn-image-app/src/main/resources/application.properties
-server.port=8080
-
-spring.datasource.url=jdbc:mysql://localhost:3306/dl_cnn
+spring.datasource.url=jdbc:mysql://localhost:3306/cv_yolo
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
