--- a/backend-java/dl-cnn/pom.xml
+++ b/backend-java/dl-cnn/pom.xml
@@ -38,6 +38,12 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Lombok: version inherited from parent -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
