--- a/backend-java/ml-linear-regression/pom.xml
+++ b/backend-java/ml-linear-regression/pom.xml
@@ -37,6 +37,12 @@
 			<version>8.0.33</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Lombok -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
