--- a/backend-java/rl-qlearning/src/main/resources/application.properties
+++ b/backend-java/rl-qlearning/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8085
+
 spring.datasource.url=jdbc:mysql://localhost:3306/rl_qlearning
 spring.datasource.username=root
 spring.datasource.password=admin
