--- a/backend-java/cv-yolo/src/main/resources/application.properties
+++ b/backend-java/cv-yolo/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8086
+
 spring.datasource.url=jdbc:mysql://localhost:3306/cv_yolo
 spring.datasource.username=root
 spring.datasource.password=admin
