--- a/backend-java/gan/src/main/resources/application.properties
+++ b/backend-java/gan/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8084
+
 spring.datasource.url=jdbc:mysql://localhost:3306/gan
 spring.datasource.username=root
 spring.datasource.password=admin
