--- a/backend-java/mm-clip/src/main/resources/application.properties
+++ b/backend-java/mm-clip/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8087
+
 spring.datasource.url=jdbc:mysql://localhost:3306/clip_client
 spring.datasource.username=root
 spring.datasource.password=admin
