--- a/backend-java/nlp-bert/src/main/resources/application.properties
+++ b/backend-java/nlp-bert/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8082
+
 spring.datasource.url=jdbc:mysql://localhost:3306/nlp_bert
 spring.datasource.username=root
 spring.datasource.password=admin
