--- a/backend-java/specialized-alphafold/src/main/resources/application.properties
+++ b/backend-java/specialized-alphafold/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=8088
+
 spring.datasource.url=jdbc:mysql://localhost:3306/specialized_alphafold
 spring.datasource.username=root
 spring.datasource.password=admin
