--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ai.crud.all.model</groupId>
-	<artifactId>ai_crud_all_model_python_java_project</artifactId>
+	<artifactId>ai_crud_all_8_model_python_java_project</artifactId>
 	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
-	<name>AI CRUD All Model Project</name>
+	<name>AI CRUD All 8 Model Project</name>
 	<description>Parent POM for AI CRUD Java backend modules</description>
 
 	<parent>
