--- a/backend-java/ml-linear-regression/pom.xml
+++ b/backend-java/ml-linear-regression/pom.xml
@@ -49,6 +49,15 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+
+		<!-- Optional: H2 for testing -->
+		<!--
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        -->
 	</dependencies>
 
 	<build>
