--- a/backend-java/mm-clip/pom.xml
+++ b/backend-java/mm-clip/pom.xml
@@ -63,6 +63,15 @@
 			<artifactId>httpclient5</artifactId>
 			<version>5.2.1</version>
 		</dependency>
+		
+		<!-- Optional: H2 for testing -->
+		<!--
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        -->
 	</dependencies>
 
 	<build>
